<resources>
    <string name="app_name">The Daily Planet</string>
    <string name="MyDp">My Dp  </string>
    <string name="readFullNews">Read Full News</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="email">E-mail</string>
    <string name="newAccount">New Account ?  Sign In</string>
    <string name="remember">Remember Me</string>
    <string name="lgnBtn">Login</string>
    <string name="helloWorld">Hello World</string>
    <string name="title">Title</string>
    <string name="subDesc">Sub Description</string>
    <string name="signUp">Sign Up</string>
    <string name="content">Content</string>
    <string name="register">Register</string>
    <string name="fullName">Full name</string>


    <string name="phone">Phone</string>
    <string name="alreadyAccount">Already Account ? Login Here</string>
    <string name="category">Category</string>
    <string name="todo">TODO</string>
    <string name="my_profile">My Profile</string>
    <string name="messages">Messages</string>
    <string name="change_dp">Change Dp</string>
    <string name="request">Request</string>
    <string name="location">Location</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="button">Button</string>
    <string name="new_heading">New Heading</string>
    <string name="sub_heading">Sub Heading</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>


</resources>