<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        android:id="@+id/home"
        />
    <item android:title="@string/notification"
        android:icon="@drawable/baseline_circle_notifications_24"
        android:id="@+id/notification"
        />
    <item android:title="@string/account"
        android:icon="@drawable/baseline_account_circle_24"
        android:id="@+id/account"
        />


<!--    <item android:id="@+id/action_search"-->
<!--        android:title="Search"-->
<!--        android:icon="@drawable/baseline_youtube_searched_for_24"-->
<!--        app:showAsAction="ifRoom|collapseActionView"-->
<!--        app:actionViewClass="android.widget.SearchView" />-->


</menu>