<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="@color/grey">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/idIvNews"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/idTVNewsHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idIvNews"
            android:textColor="@color/yellow"
            android:text="@string/new_heading"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="3dp"
            android:maxLines="2"
            android:layout_margin="3dp"
            />


        <TextView
            android:id="@+id/idTVSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_heading"
            android:layout_below="@+id/idTVNewsHeading"
            android:textColor="@color/white"
            android:maxLines="4"
            android:layout_margin="3dp"
            android:padding="3dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>













