<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".NewsDetailActivity">


    <include
        android:id="@+id/toolbar_view"
        layout="@layout/toolbar"
        />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/idBtnReadNews"
        android:layout_below="@id/toolbar_view"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          >


            <ImageView
                android:id="@+id/idIVNews"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"

                android:padding="3dp"
                android:scaleType="centerCrop" />


            <TextView
                android:id="@+id/idTVTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idIVNews"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/title"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/idTVSubDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idTVTitle"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"

                android:text="@string/subDesc"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/idTVContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idTVSubDesc"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:minLines="100"
                android:padding="4dp"
                android:text="@string/content"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>


    <Button
        android:id="@+id/idBtnReadNews"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:text="@string/readFullNews"
        android:background="@drawable/read_full_news_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"/>


</RelativeLayout>