<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.Account"
    tools:ignore="ExtraText">






    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageview_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/mypic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/todo" />



<!--    <Button-->
<!--        android:id="@+id/changeDp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/imageview_profile"-->
<!--        android:layout_marginStart="280dp"-->
<!--        android:text="@string/change_dp"-->
<!--        />-->


    <ImageView
        android:id="@+id/backImg"
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:src="@drawable/profile_ui"
        android:layout_below="@+id/imageview_profile"

        android:contentDescription="@string/todo" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview_profile"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_below="@id/imageview_profile"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textSize="18sp"

        />


    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"

        />



    <LinearLayout
        android:id="@+id/Linearlayout"
        android:layout_width="match_parent"

        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/backImg"


        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_account"
            android:layout_marginStart="70dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/myProfile"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"

            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Linearlayout"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/baseline_message_24"
            android:layout_marginStart="70dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/messgae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messages"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linearlayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Linearlayout2"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/baseline_share_24"
            android:layout_marginStart="70dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
           />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linearlayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Linearlayout3"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="60dp"
            android:src="@drawable/baseline_location_on_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linearlayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Linearlayout4"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/baseline_settings_24"
            android:layout_marginStart="70dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>





    //  LOG OUT


    <LinearLayout
        android:id="@+id/Linearlayoutlogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/Linearlayout5"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/baseline_logout_24"
            android:layout_marginStart="70dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/btnLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="20sp"
            android:textColor="#DC1F1F"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="5dp"
           />

    </LinearLayout>




</RelativeLayout>